[package]
name = "mod_io"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
modio = "0.13.1"
tokio = { version = "1.47.1", features = ["full"] }
zip = "4.3.0"
image = "0.25.6"
futures-util = "0.3.31"
